--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="icon" type="image/gif" href="../src/png-transparent-popcorn-cinema-systems-corp-film-reel-popcorn-logo-film-clapperboard-thumbnail.png">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,9 +25,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>MovieFanatics</title>
+    
   </head>
-  <body>
+  <body style="background-color: #39445a;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
